setting up for more maps

--- a/index.html
+++ b/index.html
@@ -19,8 +19,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="mapid"></div>
+    <div id="map-btn-container">
+      <button>Demographics</button>
+      <button>Unhealthy Behaviors</button>
+      <button>Health Outcomes</button>
+      <button>Screening Rates</button>
+    </div>
+    <div id="map-container">
+      <div id="demographic-language-map" class="map"></div>
+      <div id="health-amp" class="map"></div>
+    </div>
   </body>
   <script src="ALL - language demographics.js"></script>
-  <script src="script.js"></script>
+  <script src="NYC Borough Boundaries.js"></script>
+  <script src="NYC PLACES.js"></script>
+  <script src="demographic-language-map.js"></script>
+  <script src="main.js"></script>
 </html>
