setting up maps

--- a/index.html
+++ b/index.html
@@ -20,19 +20,22 @@
   </head>
   <body>
     <div id="map-btn-container">
-      <button>Demographics</button>
-      <button>Unhealthy Behaviors</button>
-      <button>Health Outcomes</button>
-      <button>Screening Rates</button>
+      <button id="btnDemographicLanguageMap">Demographics</button>
+      <button id="btnUnhealthyBehaviorsMap">Unhealthy Behaviors</button>
+      <button id="btnHealthOutcomesMap">Health Outcomes</button>
+      <button id="btnScreeningRatesMap">Screening Rates</button>
     </div>
     <div id="map-container">
-      <div id="demographic-language-map" class="map"></div>
-      <div id="health-amp" class="map"></div>
+      <div id="demographicLanguageMap" class="map"></div>
+      <div id="unhealthyBehaviorsMap" class="map"></div>
+      <div id="healthOutcomesMap" class="map"></div>
+      <div id="screeningRatesMap" class="map"></div>
     </div>
   </body>
   <script src="ALL - language demographics.js"></script>
   <script src="NYC Borough Boundaries.js"></script>
   <script src="NYC PLACES.js"></script>
   <script src="demographic-language-map.js"></script>
+  <script src="unhealthy-behavior-map.js"></script>
   <script src="main.js"></script>
 </html>
