--- a/index.html
+++ b/index.html
@@ -26,11 +26,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <div id="map-btn-container">
-    <button id="btnDemographicLanguageMap">Demographics</button>
-    <button id="btnHealthRiskBehaviorsMap">Health Risk Behaviors</button>
-    <button id="btnHealthOutcomesMap">Health Outcomes</button>
-    <button id="btnScreeningRatesMap">Screening Rates</button>
-    <button id="btnHealthStatusMap">Health Status</button>
+    <button id="btnDemographicLanguageMap" class="mapSelectBtn">
+      Demographics
+    </button>
+    <button id="btnHealthRiskBehaviorsMap" class="mapSelectBtn">
+      Health Risk Behaviors
+    </button>
+    <button id="btnHealthOutcomesMap" class="mapSelectBtn">
+      Health Outcomes
+    </button>
+    <button id="btnScreeningRatesMap" class="mapSelectBtn">
+      Screening Rates
+    </button>
+    <button id="btnHealthStatusMap" class="mapSelectBtn">Health Status</button>
   </div>
   <div id="map-container">
     <div id="demographicLanguageMap" class="map"></div>
